--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,11 +13,10 @@
     <input type="submit" value="Sign in">
 </form>
 <p>Sign up:</p>
-<form action="/api/v1/userSignIn" method="post">
+<form action="/api/v1/users" method="post">
     Login: <input type="text" name="loginSignUp"/>
     Password: <input type="password" name="passwordSignUp"/>
     <input type="submit" value="Sign up">
 </form>
-
 </body>
 </html>
