--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,8 +14,9 @@
 </form>
 <p>Sign up:</p>
 <form action="/api/v1/users" method="post">
-    Login: <input type="text" name="loginSignUp"/>
-    Password: <input type="password" name="passwordSignUp"/>
+    Login: <input type="text" name="login"/>
+    Password: <input type="password" name="password"/>
+    E-mail: <input type="email" name="email"/>
     <input type="submit" value="Sign up">
 </form>
 </body>
